@@ -1,0 +1,22 @@
+require 'osx/cocoa'
+require 'rucola/plugin'
+
+module Rucola
+  class <%= plugin_name %> < Plugin
+    def before_boot(initializer)
+    end
+    
+    def after_boot(initializer)
+    end
+  
+    def before_process(initializer)
+    end
+    
+    def after_process(initializer)
+    end
+  end
+  
+  class Configuration
+    # Add anything you need to the configuration here.
+  end
+end
